[Add]: GUI Implementation