@@ -42,15 +42,27 @@ if not exist "!TRAAS_JAR!" (
     exit /b 1
 )
 
+set "JFX_HOME=lib/javafx25"
+set "JFX_PATH=%JFX_HOME%"
+set "JFX_BIN=%~dp0%JFX_HOME%/bin"
+set "JFX_MODULES=javafx.controls,javafx.fxml"
+set "MAIN_CLASS=Main"
+if /i "%1"=="cli" set "MAIN_CLASS=Main"
 if /i "%1"=="build" goto :BuildExe
 
 if not exist bin mkdir bin
-javac -d bin -cp "lib/javafx25/*;!TRAAS_JAR!;!LIBTRACI_JAR!" src/Main.java src/MainUI.java
+
+rem Ensure JavaFX native DLLs are on the PATH
+set "PATH=%PATH%;%JFX_BIN%"
+
+javac --module-path "!JFX_PATH!" --add-modules !JFX_MODULES! -d bin -cp "!JFX_PATH!/*;!TRAAS_JAR!;!LIBTRACI_JAR!" src\*.java
 if %errorlevel% neq 0 (
     exit /b %errorlevel%
 )
 
-java -cp "bin;lib/javafx25/*;!TRAAS_JAR!;!LIBTRACI_JAR!" Main
+set "JFX_OPTS=--module-path !JFX_PATH! --add-modules !JFX_MODULES! --enable-native-access=javafx.graphics -Dprism.order=d3d,sw"
+
+java %JFX_OPTS% -cp "bin;!JFX_PATH!/*;!TRAAS_JAR!;!LIBTRACI_JAR!" %MAIN_CLASS% %*
 if %errorlevel% neq 0 (
     exit /b %errorlevel%
 )
@@ -64,7 +76,7 @@ if exist dist rmdir /s /q dist
 mkdir build\classes
 mkdir build\libs
 
-javac -d build/classes -cp "lib/javafx25/*;!TRAAS_JAR!;!LIBTRACI_JAR!" src/Main.java src/MainUI.java
+javac --module-path "!JFX_PATH!" --add-modules !JFX_MODULES! -d build/classes -cp "!JFX_PATH!/*;!TRAAS_JAR!;!LIBTRACI_JAR!" src\*.java
 if %errorlevel% neq 0 (
     echo Compilation failed.
     exit /b 1
@@ -87,7 +99,8 @@ jpackage ^
   --dest dist ^
   --name "TrafficSim" ^
   --main-jar TrafficSim.jar ^
-  --main-class Main ^
+  --main-class %MAIN_CLASS% ^
+  --java-options "--module-path %APPDIR%\\libs --add-modules !JFX_MODULES! --enable-native-access=javafx.graphics -Dprism.order=d3d,sw" ^
   --win-console ^
   --classpath "!JP_CP!"
 
